--- a/i18n/es.po
+++ b/i18n/es.po
@@ -53,6 +53,10 @@ msgid "%(cstr)s constraint failed for value %(value)r"
 msgstr "el valor %(value)r no satisface la condición %(cstr)s"
 
 #, python-format
+msgid "%(etype)s by %(author)s"
+msgstr ""
+
+#, python-format
 msgid "%(firstname)s %(surname)s"
 msgstr "%(firstname)s %(surname)s"
 
@@ -209,6 +213,9 @@ msgstr "0..1 0..1"
 msgid "AND"
 msgstr "Y"
 
+msgid "About this site"
+msgstr "Información del Sistema"
+
 msgid "Any"
 msgstr "Cualquiera"
 
@@ -328,6 +335,18 @@ msgstr "Relación"
 
 msgid "CWRelation_plural"
 msgstr "Relaciones"
+
+msgid "CWSource"
+msgstr ""
+
+msgid "CWSourceHostConfig"
+msgstr ""
+
+msgid "CWSourceHostConfig_plural"
+msgstr ""
+
+msgid "CWSource_plural"
+msgstr ""
 
 msgid "CWUniqueTogetherConstraint"
 msgstr ""
@@ -526,6 +545,12 @@ msgstr "Agregar tipo de relación"
 msgid "New CWRelation"
 msgstr "Nueva definición de relación final"
 
+msgid "New CWSource"
+msgstr ""
+
+msgid "New CWSourceHostConfig"
+msgstr ""
+
 msgid "New CWUniqueTogetherConstraint"
 msgstr ""
 
@@ -590,6 +615,9 @@ msgstr "Permisos por las relaciones"
 msgid "Please note that this is only a shallow copy"
 msgstr "Recuerde que sólo es una copia superficial"
 
+msgid "Powered by CubicWeb"
+msgstr "Potenciado en CubicWeb"
+
 msgid "RQLConstraint"
 msgstr "Restricción RQL"
 
@@ -635,6 +663,12 @@ msgstr "Buscar"
 
 msgid "SizeConstraint"
 msgstr "Restricción de tamaño"
+
+msgid ""
+"Source's configuration for a particular host. One key=value per line, "
+"authorized keys depending on the source's type, overriding values defined on "
+"the source."
+msgstr ""
 
 msgid "Startup views"
 msgstr "Vistas de inicio"
@@ -718,6 +752,12 @@ msgstr "Este tipo de relación"
 
 msgid "This CWRelation"
 msgstr "Esta definición de relación no final"
+
+msgid "This CWSource"
+msgstr ""
+
+msgid "This CWSourceHostConfig"
+msgstr ""
 
 msgid "This CWUniqueTogetherConstraint"
 msgstr ""
@@ -871,9 +911,6 @@ msgstr ""
 "Para recuperar un caché, hace falta utilizar el método\n"
 "get_cache(cachename)."
 
-msgid "About this site"
-msgstr "Información del Sistema"
-
 msgid "abstract base class for transitions"
 msgstr "Clase de base abstracta para la transiciones"
 
@@ -936,6 +973,9 @@ msgstr "Expresión RQL de lectura"
 
 msgid "add CWRelation relation_type CWRType object"
 msgstr "Definición de relación"
+
+msgid "add CWSourceHostConfig cw_host_config_of CWSource object"
+msgstr ""
 
 msgid "add CWUniqueTogetherConstraint constraint_of CWEType object"
 msgstr ""
@@ -1127,6 +1167,14 @@ msgid "april"
 msgstr "Abril"
 
 #, python-format
+msgid "archive for %(author)s"
+msgstr ""
+
+#, python-format
+msgid "archive for %(month)s/%(year)s"
+msgstr ""
+
+#, python-format
 msgid "at least one relation %(rtype)s is required on %(etype)s (%(eid)s)"
 msgstr ""
 "La entidad #%(eid)s de tipo %(etype)s debe necesariamente tener almenos una "
@@ -1184,56 +1232,6 @@ msgstr "los Favoritos son ligas directas a espacios guardados por el usuario"
 
 msgid "boxes"
 msgstr "Cajas"
-
-msgid "ctxcomponents_bookmarks_box"
-msgstr "Caja de Favoritos"
-
-msgid "ctxcomponents_bookmarks_box_description"
-msgstr "Muestra y permite administrar los favoritos del usuario"
-
-msgid "ctxcomponents_download_box"
-msgstr "Configuración de caja de descargas"
-
-msgid "ctxcomponents_download_box_description"
-msgstr "Caja que contiene los elementos descargados"
-
-msgid "ctxcomponents_edit_box"
-msgstr "Caja de Acciones"
-
-msgid "ctxcomponents_edit_box_description"
-msgstr "Muestra las acciones posibles a ejecutar para los datos seleccionados"
-
-msgid "ctxcomponents_filter_box"
-msgstr "Filtros"
-
-msgid "ctxcomponents_filter_box_description"
-msgstr "Muestra los filtros aplicables a una búsqueda realizada"
-
-msgid "ctxcomponents_possible_views_box"
-msgstr "Caja de Vistas Posibles"
-
-msgid "ctxcomponents_possible_views_box_description"
-msgstr "Muestra las vistas posibles a aplicar a los datos seleccionados"
-
-msgid "ctxcomponents_rss"
-msgstr "Ícono RSS"
-
-msgid "ctxcomponents_rss_description"
-msgstr "Muestra el ícono RSS para vistas RSS"
-
-msgid "ctxcomponents_search_box"
-msgstr "Caja de búsqueda"
-
-msgid "ctxcomponents_search_box_description"
-msgstr ""
-"Permite realizar una búsqueda simple para cualquier tipo de dato en la "
-"aplicación"
-
-msgid "ctxcomponents_startup_views_box"
-msgstr "Caja Vistas de inicio"
-
-msgid "ctxcomponents_startup_views_box_description"
-msgstr "Muestra las vistas de inicio de la aplicación"
 
 msgid "bug report sent"
 msgstr "Reporte de error enviado"
@@ -1329,6 +1327,9 @@ msgstr ""
 "no puede poner 'inlined' = %(inlined)s, %(stype)s %(rtype)s %(otype)s tiene "
 "cardinalidad %(card)s"
 
+msgid "cancel"
+msgstr ""
+
 msgid "cancel select"
 msgstr "Cancelar la selección"
 
@@ -1388,43 +1389,11 @@ msgstr "Formato"
 msgid "components"
 msgstr "Componentes"
 
-msgid "components_appliname"
-msgstr "Nombre de la aplicación"
-
-msgid "components_appliname_description"
-msgstr "Muestra el nombre de la aplicación en el encabezado de la página"
-
-msgid "components_breadcrumbs"
-msgstr "Ruta de Navegación"
-
-msgid "components_breadcrumbs_description"
-msgstr "Muestra el lugar donde se encuentra la página actual en el Sistema"
-
 msgid "components_etypenavigation"
 msgstr "Filtar por tipo"
 
 msgid "components_etypenavigation_description"
 msgstr "Permite filtrar por tipo de entidad los resultados de una búsqueda"
-
-msgid "components_help"
-msgstr "Botón de ayuda"
-
-msgid "components_help_description"
-msgstr "El botón de ayuda, en el encabezado de la página"
-
-msgid "components_loggeduserlink"
-msgstr "Liga usuario"
-
-msgid "components_loggeduserlink_description"
-msgstr ""
-"Muestra un enlace hacia el formulario de conexión para los usuarios "
-"anónimos, o una caja que contiene los enlaces del usuario conectado. "
-
-msgid "components_logo"
-msgstr "logo"
-
-msgid "components_logo_description"
-msgstr "El logo de la aplicación, en el encabezado de página"
 
 msgid "components_navigation"
 msgstr "Navigación por página"
@@ -1471,6 +1440,17 @@ msgstr "condición de"
 
 msgid "conditions"
 msgstr "condiciones"
+
+msgid "config"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "config"
+msgstr ""
+
+msgctxt "CWSourceHostConfig"
+msgid "config"
+msgstr ""
 
 msgid "config mode"
 msgstr "Modo de configuración"
@@ -1524,45 +1504,6 @@ msgstr "Restricciones que se aplican a esta relación"
 
 msgid "content type"
 msgstr "tipo MIME"
-
-msgid "contentnavigation"
-msgstr "Componentes contextuales"
-
-msgid "ctxcomponents_breadcrumbs"
-msgstr "Ruta de Navegación"
-
-msgid "ctxcomponents_breadcrumbs_description"
-msgstr "Muestra la ruta que permite localizar la página actual en el Sistema"
-
-msgid "ctxcomponents_metadata"
-msgstr "Metadatos de la Entidad"
-
-msgid "ctxcomponents_metadata_description"
-msgstr ""
-
-msgid "ctxcomponents_prevnext"
-msgstr "Elemento anterior / siguiente"
-
-msgid "ctxcomponents_prevnext_description"
-msgstr ""
-"Muestra las ligas que permiten pasar de una entidad a otra en las entidades "
-"que implementan la interface \"anterior/siguiente\"."
-
-msgid "ctxcomponents_seealso"
-msgstr "Vea también"
-
-msgid "ctxcomponents_seealso_description"
-msgstr ""
-"sección que muestra las entidades relacionadas por la relación \"vea también"
-"\" , si la entidad soporta esta relación."
-
-msgid "ctxcomponents_wfhistory"
-msgstr "Histórico del workflow."
-
-msgid "ctxcomponents_wfhistory_description"
-msgstr ""
-"Sección que muestra el reporte histórico de las transiciones del workflow. "
-"Aplica solo en entidades con workflow."
 
 msgid "context"
 msgstr "Contexto"
@@ -1647,6 +1588,11 @@ msgstr "Creación de una propiedad por el usuario %(linkto)s"
 
 msgid "creating CWRelation (CWRelation relation_type CWRType %(linkto)s)"
 msgstr "Creación de la relación %(linkto)s"
+
+msgid ""
+"creating CWSourceHostConfig (CWSourceHostConfig cw_host_config_of CWSource "
+"%(linkto)s)"
+msgstr ""
 
 msgid ""
 "creating CWUniqueTogetherConstraint (CWUniqueTogetherConstraint "
@@ -1774,6 +1720,121 @@ msgstr "Exportar entidades en csv"
 msgid "csv export"
 msgstr "Exportar en CSV"
 
+msgid "ctxcomponents"
+msgstr "Componentes contextuales"
+
+msgid "ctxcomponents_anonuserlink"
+msgstr "Liga usuario"
+
+msgid "ctxcomponents_anonuserlink_description"
+msgstr ""
+"Muestra un enlace hacia el formulario de conexión para los usuarios "
+"anónimos, o una caja que contiene los enlaces del usuario conectado. "
+
+msgid "ctxcomponents_appliname"
+msgstr "Nombre de la aplicación"
+
+msgid "ctxcomponents_appliname_description"
+msgstr "Muestra el nombre de la aplicación en el encabezado de la página"
+
+msgid "ctxcomponents_bookmarks_box"
+msgstr "Caja de Favoritos"
+
+msgid "ctxcomponents_bookmarks_box_description"
+msgstr "Muestra y permite administrar los favoritos del usuario"
+
+msgid "ctxcomponents_breadcrumbs"
+msgstr "Ruta de Navegación"
+
+msgid "ctxcomponents_breadcrumbs_description"
+msgstr "Muestra la ruta que permite localizar la página actual en el Sistema"
+
+msgid "ctxcomponents_download_box"
+msgstr "Configuración de caja de descargas"
+
+msgid "ctxcomponents_download_box_description"
+msgstr "Caja que contiene los elementos descargados"
+
+msgid "ctxcomponents_edit_box"
+msgstr "Caja de Acciones"
+
+msgid "ctxcomponents_edit_box_description"
+msgstr "Muestra las acciones posibles a ejecutar para los datos seleccionados"
+
+msgid "ctxcomponents_facet.filters"
+msgstr "Filtros"
+
+msgid "ctxcomponents_facet.filters_description"
+msgstr "Muestra los filtros aplicables a una búsqueda realizada"
+
+msgid "ctxcomponents_logo"
+msgstr "logo"
+
+msgid "ctxcomponents_logo_description"
+msgstr "El logo de la aplicación, en el encabezado de página"
+
+msgid "ctxcomponents_metadata"
+msgstr "Metadatos de la Entidad"
+
+msgid "ctxcomponents_metadata_description"
+msgstr ""
+
+msgid "ctxcomponents_possible_views_box"
+msgstr "Caja de Vistas Posibles"
+
+msgid "ctxcomponents_possible_views_box_description"
+msgstr "Muestra las vistas posibles a aplicar a los datos seleccionados"
+
+msgid "ctxcomponents_prevnext"
+msgstr "Elemento anterior / siguiente"
+
+msgid "ctxcomponents_prevnext_description"
+msgstr ""
+"Muestra las ligas que permiten pasar de una entidad a otra en las entidades "
+"que implementan la interface \"anterior/siguiente\"."
+
+msgid "ctxcomponents_rss"
+msgstr "Ícono RSS"
+
+msgid "ctxcomponents_rss_description"
+msgstr "Muestra el ícono RSS para vistas RSS"
+
+msgid "ctxcomponents_search_box"
+msgstr "Caja de búsqueda"
+
+msgid "ctxcomponents_search_box_description"
+msgstr ""
+"Permite realizar una búsqueda simple para cualquier tipo de dato en la "
+"aplicación"
+
+msgid "ctxcomponents_seealso"
+msgstr "Vea también"
+
+msgid "ctxcomponents_seealso_description"
+msgstr ""
+"sección que muestra las entidades relacionadas por la relación \"vea también"
+"\" , si la entidad soporta esta relación."
+
+msgid "ctxcomponents_startup_views_box"
+msgstr "Caja Vistas de inicio"
+
+msgid "ctxcomponents_startup_views_box_description"
+msgstr "Muestra las vistas de inicio de la aplicación"
+
+msgid "ctxcomponents_userstatus"
+msgstr ""
+
+msgid "ctxcomponents_userstatus_description"
+msgstr ""
+
+msgid "ctxcomponents_wfhistory"
+msgstr "Histórico del workflow."
+
+msgid "ctxcomponents_wfhistory_description"
+msgstr ""
+"Sección que muestra el reporte histórico de las transiciones del workflow. "
+"Aplica solo en entidades con workflow."
+
 msgid "ctxtoolbar"
 msgstr "Barra de herramientas"
 
@@ -1782,6 +1843,72 @@ msgstr "Workflow específico"
 
 msgid "custom_workflow_object"
 msgstr "Workflow de"
+
+msgid "cw_dont_cross"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "cw_dont_cross"
+msgstr ""
+
+msgid "cw_dont_cross_object"
+msgstr ""
+
+msgctxt "CWRType"
+msgid "cw_dont_cross_object"
+msgstr ""
+
+msgid "cw_host_config_of"
+msgstr ""
+
+msgctxt "CWSourceHostConfig"
+msgid "cw_host_config_of"
+msgstr ""
+
+msgid "cw_host_config_of_object"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "cw_host_config_of_object"
+msgstr ""
+
+msgid "cw_may_cross"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "cw_may_cross"
+msgstr ""
+
+msgid "cw_may_cross_object"
+msgstr ""
+
+msgctxt "CWRType"
+msgid "cw_may_cross_object"
+msgstr ""
+
+msgid "cw_source"
+msgstr ""
+
+msgid "cw_source_object"
+msgstr ""
+
+msgid "cw_support"
+msgstr ""
+
+msgctxt "CWSource"
+msgid "cw_support"
+msgstr ""
+
+msgid "cw_support_object"
+msgstr ""
+
+msgctxt "CWEType"
+msgid "cw_support_object"
+msgstr ""
+
+msgctxt "CWRType"
+msgid "cw_support_object"
+msgstr ""
 
 msgid "cwetype-box"
 msgstr "Vista \"caja\""
@@ -2198,10 +2325,6 @@ msgstr "Actualización de la Entidad"
 msgid "error while embedding page"
 msgstr "Error durante la inclusión de la página"
 
-#, python-format
-msgid "error while handling __method: %s"
-msgstr "Error ocurrido durante el tratamiento del formulario (%s)"
-
 msgid "error while publishing ReST text"
 msgstr ""
 "Se ha producido un error durante la interpretación del texto en formato ReST"
@@ -2248,6 +2371,9 @@ msgstr "Tipo"
 msgid "external page"
 msgstr "Página externa"
 
+msgid "facet.filters"
+msgstr "Filtros"
+
 msgid "facetbox"
 msgstr "Caja de facetas"
 
@@ -2256,6 +2382,12 @@ msgstr "Faceta \"creada por\""
 
 msgid "facets_created_by-facet_description"
 msgstr "Faceta creada por"
+
+msgid "facets_cw_source-facet"
+msgstr ""
+
+msgid "facets_cw_source-facet_description"
+msgstr ""
 
 msgid "facets_cwfinal-facet"
 msgstr "Faceta \"final\""
@@ -2467,8 +2599,11 @@ msgstr "hCalendar"
 msgid "has_text"
 msgstr "Contiene el texto"
 
-msgid "help"
-msgstr "Ayuda"
+msgid "header-center"
+msgstr ""
+
+msgid "header-right"
+msgstr ""
 
 msgid "hide filter form"
 msgstr "Esconder el filtro"
@@ -2793,6 +2928,9 @@ msgctxt "CWUser"
 msgid "login"
 msgstr "Usuario"
 
+msgid "login / password"
+msgstr ""
+
 msgid "login or email"
 msgstr "Usuario o dirección de correo"
 
@@ -2836,6 +2974,13 @@ msgstr "Relación obligatoria"
 
 msgid "march"
 msgstr "Marzo"
+
+msgid "match_host"
+msgstr ""
+
+msgctxt "CWSourceHostConfig"
+msgid "match_host"
+msgstr ""
 
 msgid "maximum number of characters in short description"
 msgstr "Máximo de caracteres en las descripciones cortas"
@@ -2917,6 +3062,10 @@ msgctxt "CWRType"
 msgid "name"
 msgstr "Nombre"
 
+msgctxt "CWSource"
+msgid "name"
+msgstr ""
+
 msgctxt "State"
 msgid "name"
 msgstr "Nombre"
@@ -2942,6 +3091,9 @@ msgid ""
 msgstr ""
 "Nombre de las variables principales que deberían ser utilizadas en la "
 "selección de ser necesario (separarlas con comas)"
+
+msgid "name of the source"
+msgstr ""
 
 msgid "name or identifier of the permission"
 msgstr "Nombre o identificador del permiso"
@@ -3135,9 +3287,6 @@ msgstr "Por favor corregir los siguientes errores:"
 msgid "possible views"
 msgstr "Vistas posibles"
 
-msgid "Powered by CubicWeb"
-msgstr "Potenciado en CubicWeb"
-
 msgid "prefered_form"
 msgstr "Forma preferida"
 
@@ -3221,6 +3370,9 @@ msgstr "Puede leer"
 msgctxt "RQLExpression"
 msgid "read_permission_object"
 msgstr "Puede leer"
+
+msgid "regexp matching host(s) to which this config applies"
+msgstr ""
 
 msgid "registry"
 msgstr "Registro"
@@ -3398,6 +3550,9 @@ msgstr "Secundaria"
 msgid "security"
 msgstr "Seguridad"
 
+msgid "see more"
+msgstr ""
+
 msgid "see them all"
 msgstr "Ver todos"
 
@@ -3499,6 +3654,11 @@ msgstr ""
 
 msgid "sorry, the server is unable to handle this query"
 msgstr "Lo sentimos, el servidor no puede manejar esta consulta"
+
+msgid ""
+"source's configuration. One key=value per line, authorized keys depending on "
+"the source's type"
+msgstr ""
 
 msgid "sparql xml"
 msgstr "XML Sparql"
@@ -3823,6 +3983,10 @@ msgctxt "BaseTransition"
 msgid "type"
 msgstr "Tipo"
 
+msgctxt "CWSource"
+msgid "type"
+msgstr ""
+
 msgctxt "Transition"
 msgid "type"
 msgstr "Tipo"
@@ -3833,6 +3997,9 @@ msgstr "Tipo"
 
 msgid "type here a sparql query"
 msgstr "Escriba aquí su consulta en Sparql"
+
+msgid "type of the source"
+msgstr ""
 
 msgid "ui"
 msgstr "Interfaz Genérica"
@@ -4186,23 +4353,5 @@ msgstr "Ha terminado la sesión"
 msgid "you should probably delete that property"
 msgstr "Debería probablamente suprimir esta propriedad"
 
-#~ msgid "add_perm"
-#~ msgstr "Agregado"
-
-#~ msgid "delete_perm"
-#~ msgstr "Eliminar"
-
 #~ msgid "edition"
 #~ msgstr "Edición"
-
-#~ msgid "graphical workflow for %s"
-#~ msgstr "Gráfica del workflow por %s"
-
-#~ msgid "personnal informations"
-#~ msgstr "Información personal"
-
-#~ msgid "read_perm"
-#~ msgstr "Lectura"
-
-#~ msgid "update_perm"
-#~ msgstr "Permiso de Modificar"
