--- a/i18n/en.po
+++ b/i18n/en.po
@@ -2833,6 +2833,9 @@ msgstr ""
 msgid "main informations"
 msgstr ""
 
+msgid "main_tab"
+msgstr "description"
+
 msgid "mainvars"
 msgstr "main vars"
 
