--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.10.2-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 18 Oct 2010 11:47:37 +0200
+
 cubicweb (3.10.1-1) unstable; urgency=low
 
   * new upstream release
