--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.10.3-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 20 Oct 2010 16:00:33 +0200
+
 cubicweb (3.10.2-1) unstable; urgency=low
 
   * new upstream release
