--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.9.9-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 21 Oct 2010 09:33:46 +0200
+
 cubicweb (3.9.8-1) unstable; urgency=low
 
   * new upstream release
