--- a/i18n/en.po
+++ b/i18n/en.po
@@ -3919,7 +3919,8 @@ msgstr ""
 msgid "unknown external entity"
 msgstr ""
 
-msgid "unknown property key"
+#, python-format
+msgid "unknown property key %s"
 msgstr ""
 
 msgid "unknown vocabulary:"
