--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.9.9-2) unstable; urgency=low
+
+  * fix cubicweb-common content
+
+ -- Pierre-Yves David <pierre-yves.david@logilab.fr> Tue, 23 Nov 2010 14:00:46 +0200
+
 cubicweb (3.9.9-1) unstable; urgency=low
 
   * new upstream release
