--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.10.6-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Nicolas Chauvat <nicolas.chauvat@logilab.fr>  Tue, 30 Nov 2010 22:25:41 +0100
+
 cubicweb (3.10.5-1) unstable; urgency=low
 
   * new upstream release
